fix misalignment between game-board and the game-over overlay

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(20, 1fr);
-    border: 1px solid black;
+    outline: 1px solid black;
     background-color: lightblue;
     overflow: hidden;/* the last piece can stick over the top of the board when the game is over */
 }
